# cortex-sulista

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  spec-margem-por-cliente.md
.claude/agents/: analista_preditivo.md  comercial.md  financeiro.md  frota.md  gestao.md  integracoes.md  jornada.md  operacional.md  orquestrador.md  programacao.md  suprimentos.md  telemetria.md  torre_controle.md  torre_seguranca.md
Querys Sulista/AVACORP/: AGREGADOS - Acertos Realizados.sql  AGREGADOS - Débitos de Agregado.sql  AGREGADOS - Relatorio de Agregados.sql  COMERCIAL - Leads Ativos.sql  COMERCIAL - Projetos.sql  COMERCIAL - Repactuações.sql  FATURAMENTO - Faturamento Ano x Ano (2025x2026).sql  FATURAMENTO - Faturamento Mes x Mes (2025x2026).sql  FATURAMENTO - Faturamento por Cliente.sql  FATURAMENTO - Faturamento por Modalidade.sql  FATURAMENTO - Faturamento por Segmento.sql  FATURAMENTO - Orçado x Faturado - Diario.sql  (+27 more)
api/: alertas.py  auth.py  copiloto.py  custos_sql.py  db.py  db_folha.py  main.py  push.py  queries.py  queries_folha.py  servidor.py
config/: dre_cliente_params.yaml  parametros.yaml  plano_contas.yaml
design-system-sulista-completo/: README.md
docs/: ARQUITETURA.md  GUIA_CLAUDE_CODE.md  INTEGRACOES.md  SEGURANCA.md  dre_ia_analise.xlsx  fase4-validacao.md  index.md  log.md
migrations/: env.py
scripts/: autodeploy.ps1  bootstrap.sh  db.sh  digest_diario.sh  instalar_chave_erp.ps1  run_api.ps1  run_api.sh  scan_financeiro.sql  scan_financeiro_ava.sql  scan_geral.sql  tunel_erp.ps1
sql/: schema.sql
(+222 files in other folders)
