[project]
name = "cortex"
version = "0.1.0"
description = "CÓRTEX — cérebro de gestão da transportadora (backend + migrations)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "pgvector>=0.2",
  "pydantic>=2.6",
  "pydantic-settings>=2.1",
  "pyjwt>=2.8",
  "passlib[argon2]>=1.7",
  "redis>=5.0",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "tenacity>=8.2",          # retry/backoff dos conectores
  "psycopg-pool>=3.2",
]

[tool.ruff]
line-length = 100
